# agent-space

./: docker-compose.yml  main.py  pyproject.toml
backend/: main.py  pyproject.toml
backend/agents/base/: chat_agent.py  teste.py
backend/agents/kairoscip/: agent.py
database/: dockerfile
frontend/: pyproject.toml
