[project]
name = "agent-space"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi[standard]>=0.120.1",
    "openai-agents[redis]>=0.4.2",
    "redis>=7.0.1",
    "pandas>=2.3.3",
    "streamlit>=1.50.0",
]